--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@rnbo/js": "^1.1.0",
+    "nuxt-socket-io": "^3.0.12",
     "tone": "^14.7.77"
   }
 }
