--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0",
     "nuxt": "^3.2.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
