--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "firebase-admin": "^11.7.0",
     "nuxt": "^3.2.3",
     "postcss": "^8.4.21",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
     "@rnbo/js": "^1.1.0",
     "nuxt-socket-io": "^3.0.12",
     "p5": "^1.6.0",
+    "random-words": "^1.3.0",
     "tone": "^14.7.77"
   }
 }
